apps/staging/podinfo/podinfo-patch.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: podinfo
spec:
  replicas: 4
  #template:
  #  spec:
  #    containers:
  #      - name: podinfo
  #        args:
  #          - -ascii
  #          - -name=STAGING
