apps/staging/podinfo/ingressroute-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simplepodinfo
spec:
  routes:
   - kind: Rule
     match: Host(`podinfo.staging.hephy.pro`)
     services:
        - kind: Service
          name: podinfo
          port: 9898
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfotls
spec:
  routes:
   - kind: Rule
     match: Host(`podinfo.staging.hephy.pro`)
     services:
        - kind: Service
          name: podinfo
          port: 9898
